--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,41 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = "https://tarduspura.github.io/"
+title = "Tardus Pura 的个人空间"
 theme = "PaperMod"
+
+enableRobotsTXT = true
+buildDrafts = false
+buildFuture = false
+buildExpired = false
+
+[minify]
+  disableXML = true
+  minifyOutput = true
+
+[params]
+  homeInfoParams = { Title = "你好，我是 Tardus Pura", Content = "技术 | 户外 | 哲学" }
+
+[[menu.main]]
+  identifier = "home"
+  name = "首页"
+  url = "/"
+  weight = 1
+
+[[menu.main]]
+  identifier = "posts"
+  name = "笔记"
+  url = "/posts/"
+  weight = 2
+
+[[menu.main]]
+  identifier = "projects"
+  name = "项目"
+  url = "/projects/"
+  weight = 3
+
+[[menu.main]]
+  identifier = "about"
+  name = "关于"
+  url = "/about/"
+  weight = 4
+  
+  
