--- a/config.toml
+++ b/config.toml
@@ -27,9 +27,9 @@ buildExpired = false
   weight = 1
 
 [[menu.main]]
-  identifier = "about"
-  name = "关于"
-  url = "/about/"
+  identifier = "guide"
+  name = "导航"
+  url = "/guide/"
   weight = 2
 
 [[menu.main]]
@@ -62,4 +62,8 @@ buildExpired = false
   url = "/her/"
   weight = 7  
 
-  
+[[menu.main]]
+  identifier = "about"
+  name = "关于"
+  url = "/about/"
+  weight = 8
