--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,7 @@ buildExpired = false
   homePostsRSS = true
   homePostsLimit = 3
   math = true
+  showMenuItems = 8
 
 [params.assets]
   customCSS = ["css/custom.css"]  
