--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,12 @@ buildDrafts = false
 buildFuture = false
 buildExpired = false
 
+# Markdown 渲染设置
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      hardWraps = true  # 单个换行符也会渲染为 <br>
+
 [minify]
   disableXML = true
   minifyOutput = true
