--- a/config.toml
+++ b/config.toml
@@ -42,12 +42,35 @@ paginate = 3
 [outputs]
   home = ["HTML", "RSS", "JSON"]
 
-[params.homeInfoParams]
-  Title = "Hi，Tardus Pura here"
-  Content = "知识 | 户外 | 创作"
-
 [params.profileMode]
-  enabled = false
+  enabled = true
+  title = "Tardus Pura"
+  subtitle = "知识 | 户外 | 创作"
+  imageUrl = "/images/avatar.jpg"  # 你的头像路径
+  imageWidth = 150
+  imageHeight = 150
+  imageTitle = "Tardus Pura"
+  
+  [[params.profileMode.buttons]]
+    name = "笔记"
+    url = "/posts"
+  
+  [[params.profileMode.buttons]]
+    name = "旅行"
+    url = "/travel"
+  
+  [[params.profileMode.buttons]]
+    name = "Her"
+    url = "/her"
+
+# 社交图标
+[[params.socialIcons]]
+  name = "github"
+  url = "https://github.com/tarduspura"
+
+[[params.socialIcons]]
+  name = "email"
+  url = "mailto:fabien_mana@foxmail.com"
 
 [params.assets]
   # PaperMod 会自动加载 assets/css/extended/ 目录下的 CSS 文件
